[gd_scene load_steps=16 format=3 uid="uid://cwwig1f1cr45b"]

[ext_resource type="Script" path="res://game.gd" id="1_iju5o"]
[ext_resource type="Script" path="res://playerScript.gd" id="1_nuuqp"]
[ext_resource type="Texture2D" uid="uid://cgqxlk41rrq71" path="res://icon.svg" id="2_j7deo"]
[ext_resource type="Texture2D" uid="uid://bhtfxnhd5x4v5" path="res://devTexture.jpg" id="3_y0koe"]
[ext_resource type="AudioStream" uid="uid://dcnrei4dh0w72" path="res://SFX/stepsConcept.mp3" id="4_638m3"]
[ext_resource type="Script" path="res://Employee.gd" id="4_kna2b"]
[ext_resource type="PackedScene" uid="uid://bij64nm8l8lic" path="res://game_ui.tscn" id="5_8u384"]
[ext_resource type="Script" path="res://taskObject.gd" id="6_ef730"]
[ext_resource type="AudioStream" uid="uid://bden4ex1hw444" path="res://SFX/game themes/Game.mp3" id="7_5ce1c"]
[ext_resource type="AudioStream" uid="uid://db88odf3n051q" path="res://SFX/game themes/GameRepeat.mp3" id="8_4eobv"]
[ext_resource type="AudioStream" uid="uid://fof7feqq11b6" path="res://SFX/Task completion.mp3" id="9_tw1qk"]
[ext_resource type="AudioStream" uid="uid://b16telo6d6qjf" path="res://SFX/Water cooler.mp3" id="10_c8nvd"]
[ext_resource type="AudioStream" uid="uid://bvid087xextat" path="res://SFX/Fix.mp3" id="13_vxowe"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ghn6u"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_eqbj3"]
size = Vector2(238.431, 239.138)

[node name="Node2D" type="Node2D"]
script = ExtResource("1_iju5o")

[node name="Player" type="CharacterBody2D" parent="."]
scale = Vector2(1.59921, 1.36868)
script = ExtResource("1_nuuqp")

[node name="Sprite2D" type="Sprite2D" parent="Player"]
visibility_layer = 519
scale = Vector2(0.970719, 1.00868)
texture = ExtResource("2_j7deo")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
scale = Vector2(6.48, 6.36)
shape = SubResource("RectangleShape2D_ghn6u")

[node name="Camera2D" type="Camera2D" parent="Player"]
scale = Vector2(1.50189, 0.369756)
zoom = Vector2(0.72, 0.72)
position_smoothing_enabled = true

[node name="Walking" type="AudioStreamPlayer2D" parent="Player"]
stream = ExtResource("4_638m3")
volume_db = -5.807
bus = &"SFX"

[node name="BG Test Texture" type="Sprite2D" parent="."]
z_index = -1
scale = Vector2(3.50869, 3.00734)
texture = ExtResource("3_y0koe")

[node name="Employee" type="Area2D" parent="." groups=["Employees"]]
position = Vector2(-969, -485)
scale = Vector2(2.1222, 1.84831)
script = ExtResource("4_kna2b")
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Employee"]
shape = SubResource("RectangleShape2D_eqbj3")

[node name="Sprite2D2" type="Sprite2D" parent="Employee"]
modulate = Color(0.85368, 0.108742, 0, 1)
texture = ExtResource("3_y0koe")

[node name="Employee2" type="Area2D" parent="." groups=["Employees"]]
position = Vector2(-961, 436)
scale = Vector2(2.1222, 1.84831)
script = ExtResource("4_kna2b")
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Employee2"]
position = Vector2(0.312909, -0.650787)
shape = SubResource("RectangleShape2D_eqbj3")

[node name="Sprite2D2" type="Sprite2D" parent="Employee2"]
modulate = Color(0.85368, 0.108742, 0, 1)
texture = ExtResource("3_y0koe")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="GameUI" parent="CanvasLayer" instance=ExtResource("5_8u384")]

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_5ce1c")
volume_db = -7.0
bus = &"Music"

[node name="MusicRepeat" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_4eobv")
volume_db = -7.0
bus = &"Music"

[node name="TaskCompleted" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_tw1qk")
volume_db = -10.558
bus = &"SFX"

[node name="Cooler" type="Area2D" parent="."]
position = Vector2(735, 334)
script = ExtResource("6_ef730")
objectTaskID = 1
metadata/_edit_group_ = true

[node name="CoolerFX" type="AudioStreamPlayer2D" parent="Cooler"]
stream = ExtResource("10_c8nvd")
volume_db = 5.807
attenuation = 2.37841
bus = &"SFX"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Cooler"]
shape = SubResource("RectangleShape2D_eqbj3")

[node name="Sprite2D2" type="Sprite2D" parent="Cooler"]
modulate = Color(0.508296, 0.473833, 0, 1)
texture = ExtResource("3_y0koe")

[node name="Printer" type="Area2D" parent="."]
position = Vector2(662, -356)
script = ExtResource("6_ef730")
objectTaskID = 2
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Printer"]
shape = SubResource("RectangleShape2D_eqbj3")

[node name="Sprite2D2" type="Sprite2D" parent="Printer"]
modulate = Color(0.184652, 0.54281, 0.305821, 1)
texture = ExtResource("3_y0koe")

[node name="PrinterFX" type="AudioStreamPlayer2D" parent="Printer"]
stream = ExtResource("13_vxowe")
volume_db = -3.812
attenuation = 2.37841
bus = &"SFX"

[connection signal="linkTask" from="Player" to="Employee" method="_on_player_link_task"]
[connection signal="linkTask" from="Player" to="Employee2" method="_on_player_link_task"]
[connection signal="removeTask" from="Player" to="Employee" method="_on_player_remove_task"]
[connection signal="removeTask" from="Player" to="Employee2" method="_on_player_remove_task"]
[connection signal="area_entered" from="Employee" to="Player" method="_on_employee_area_entered"]
[connection signal="body_entered" from="Employee" to="Employee" method="_on_body_entered"]
[connection signal="newTask" from="Employee" to="Player" method="_on_employee_new_task"]
[connection signal="taskComplete" from="Employee" to="Player" method="_on_employee_task_complete"]
[connection signal="area_entered" from="Employee2" to="Player" method="_on_employee_area_entered"]
[connection signal="body_entered" from="Employee2" to="Employee2" method="_on_body_entered"]
[connection signal="newTask" from="Employee2" to="Player" method="_on_employee_new_task"]
[connection signal="taskComplete" from="Employee2" to="Player" method="_on_employee_task_complete"]
[connection signal="finished" from="Music" to="." method="_on_music_finished"]
[connection signal="area_entered" from="Cooler" to="Player" method="_on_printer_area_entered"]
[connection signal="area_entered" from="Cooler" to="Cooler" method="_on_area_entered"]
[connection signal="body_entered" from="Cooler" to="Player" method="_on_printer_body_entered"]
[connection signal="body_entered" from="Cooler" to="Cooler" method="_on_body_entered"]
[connection signal="area_entered" from="Printer" to="Player" method="_on_printer_area_entered"]
[connection signal="area_entered" from="Printer" to="Printer" method="_on_area_entered"]
[connection signal="body_entered" from="Printer" to="Player" method="_on_printer_body_entered"]
[connection signal="body_entered" from="Printer" to="Printer" method="_on_body_entered"]
[connection signal="taskGoalComplete" from="Printer" to="Employee" method="_on_task_goal_complete"]
[connection signal="taskGoalComplete" from="Printer" to="Employee2" method="_on_task_goal_complete"]
[connection signal="taskRemoteComplete" from="Printer" to="Employee" method="_on_task_remote_complete"]
[connection signal="taskRemoteComplete" from="Printer" to="Employee2" method="_on_task_remote_complete"]
